--- a/Coursera/Princeton/Algorithms-Part-1/Week 3/2. Quicksort.ipynb
+++ b/Coursera/Princeton/Algorithms-Part-1/Week 3/2. Quicksort.ipynb
@@ -76,16 +76,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initial array: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-      "[4, 1, 7, 6, 9, 8, 2, 10, 3, 5]\n",
-      "Sorted array:        None\n"
+      "Initial array:  [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+      "Shuffled array: [8, 6, 2, 1, 10, 4, 5, 9, 7, 3]\n",
+      "Sorted array:   [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
      ]
     }
    ],
@@ -98,9 +98,18 @@
     "    def __init__(self):\n",
     "        pass\n",
     "\n",
-    "    def sort(self, vec, lo, hi):\n",
-    "        vec = Shuffle().shuffle(vec)\n",
-    "        print vec\n",
+    "    def sort(self, vec, lo=float('-inf'), hi=float('inf')):\n",
+    "        if lo == float('-inf'):\n",
+    "            Shuffle().shuffle(vec)\n",
+    "            print('Shuffled array: {}'.format(vec)) \n",
+    "            lo, hi = 0, len(vec)-1\n",
+    "            self.sort(vec, lo, hi)\n",
+    "        else:\n",
+    "            if hi <= lo: return \n",
+    "            j = self.partition(vec, lo, hi)\n",
+    "            self.sort(vec, lo, j-1)\n",
+    "            self.sort(vec, j+1, hi)\n",
+    "        return vec\n",
     "\n",
     "    def less(self, v, w):\n",
     "        return v.compare_to(w) < 0\n",
@@ -114,22 +123,18 @@
     "        return True\n",
     "    \n",
     "    def exchange(self, vec, i, j):\n",
-    "        swap = vec[i]\n",
-    "        vec[i] = vec[j]\n",
-    "        vec[j] = swap\n",
-    "        return vec\n",
+    "        vec[i], vec[j] = vec[j], vec[i]\n",
     "\n",
-    "    # partition\n",
-    "    def partition(vec, lo, hi):\n",
-    "        i, j = lo+1, hi-1\n",
+    "    def partition(self, vec, lo, hi):\n",
+    "        i, j = lo+1, hi\n",
     "        while True:\n",
     "            while self.less(vec[i], vec[lo]):\n",
     "                i += 1\n",
-    "                if i == hi: break\n",
-    "            while self.less(vec[lo], vec[lo]):\n",
+    "                if i >= hi: break\n",
+    "            while self.less(vec[lo], vec[j]):\n",
     "                j -= 1\n",
     "                if j == lo: break\n",
-    "            if i > j: break\n",
+    "            if i >= j: break\n",
     "            self.exchange(vec, j, i)\n",
     "        self.exchange(vec, j, lo)\n",
     "        return j\n",
@@ -137,18 +142,44 @@
     "            \n",
     "vec = [Integer(1), Integer(2), Integer(3), Integer(4), Integer(5), \n",
     "       Integer(6), Integer(7), Integer(8), Integer(9), Integer(10)]\n",
-    "print('Initial array: {}'.format(vec))\n",
+    "print('Initial array:  {}'.format(vec))\n",
     "quick_alg = QuickSort()\n",
-    "sorted_vec = quick_alg.sort(vec, 0, len(vec))\n",
-    "print('Sorted array:  {}'.format(sorted_vec))"
+    "sorted_vec = quick_alg.sort(vec)\n",
+    "print('Sorted array:   {}'.format(sorted_vec))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "A visualization of the Quick Sort can be seen by its trace illustred below, where the first row below the header contains the input and the second row contains the shuffled input. When `lo` and `hi` contain the same value (*e.g.*, row 7 (`lo=1`, `hi=1`) and row 8 (`lo=4`, `hi=4`)), there are no partitions to the subarray. The last row contains the result of the sort algorithm.\n",
+    "\n",
+    "|  lo   |   j   |   hi  |   0   |   1   |   2   |   3   |   4   |   5   |   6   |   7   |   8   |   9   |  10   |  11   |  12   |  13   |  14   |  15   |\n",
+    "| :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: |\n",
+    "|  $-$  |  $-$  |  $-$  | **Q** | **U** | **I** | **C** | **K** | **S** | **O** | **R** | **T** | **E** | **X** | **A** | **M** | **P** | **L** | **E** |\n",
+    "|  $-$  |  $-$  |  $-$  | **K** | **R** | **A** | **T** | **E** | **L** | **E** | **P** | **U** | **I** | **M** | **Q** | **C** | **X** | **O** | **S** |\n",
+    "|   0   |  *5*  |  15   | **E** | **C** | **A** | **I** | **E** |  *K*  | **L** | **P** | **U** | **T** | **M** | **Q** | **R** | **X** | **O** | **S** |\n",
+    "|   0   |  *3*  |   4   | **E** | **C** | **A** |  *E*  | **I** |   K   |   L   |   P   |   U   |   T   |   M   |   Q   |   R   |   X   |   O   |   S   |\n",
+    "|   0   |  *2*  |   2   | **A** | **C** |  *E*  |   E   |   I   |   K   |   L   |   P   |   U   |   T   |   M   |   Q   |   R   |   X   |   O   |   S   |\n",
+    "|   0   |  *0*  |   1   |  *A*  | **C** |   E   |   E   |   I   |   K   |   L   |   P   |   U   |   T   |   M   |   Q   |   R   |   X   |   O   |   S   |\n",
+    "|   1   |  $-$  |   1   |   A   |  *C*  |   E   |   E   |   I   |   K   |   L   |   P   |   U   |   T   |   M   |   Q   |   R   |   X   |   O   |   S   |\n",
+    "|   4   |  $-$  |   4   |   A   |   C   |   E   |   E   |  *I*  |   K   |   L   |   P   |   U   |   T   |   M   |   Q   |   R   |   X   |   O   |   S   |\n",
+    "|   6   |  *6*  |  15   |   A   |   C   |   E   |   E   |   I   |   K   |  *L*  | **P** | **U** | **T** | **M** | **Q** | **R** | **X** | **O** | **S** |\n",
+    "|   7   |  *9*  |  15   |   A   |   C   |   E   |   E   |   I   |   K   |   L   | **M** | **O** |  *P*  | **T** | **Q** | **R** | **X** | **U** | **S** |\n",
+    "|   7   |  *7*  |   8   |   A   |   C   |   E   |   E   |   I   |   K   |   L   |  *M*  | **O** |   P   |   T   |   Q   |   R   |   X   |   U   |   S   |\n",
+    "|   8   |  $-$  |   8   |   A   |   C   |   E   |   E   |   I   |   K   |   L   |   M   |  *O*  |   P   |   T   |   Q   |   R   |   X   |   U   |   S   |\n",
+    "|  10   | *13*  |  15   |   A   |   C   |   E   |   E   |   I   |   K   |   L   |   M   |   O   |   P   | **S** | **Q** | **R** |  *T*  | **U** | **X** |\n",
+    "|  10   | *12*  |  12   |   A   |   C   |   E   |   E   |   I   |   K   |   L   |   M   |   O   |   P   | **R** | **Q** |  *S*  |   T   |   U   |   X   |\n",
+    "|  10   | *11*  |  11   |   A   |   C   |   E   |   E   |   I   |   K   |   L   |   M   |   O   |   P   | **Q** |  *R*  |   S   |   T   |   U   |   X   |\n",
+    "|  10   |  $-$  |  10   |   A   |   C   |   E   |   E   |   I   |   K   |   L   |   M   |   O   |   P   |  *Q*  |   R   |   S   |   T   |   U   |   X   |\n",
+    "|  14   | *14*  |  15   |   A   |   C   |   E   |   E   |   I   |   K   |   L   |   M   |   O   |   P   |   Q   |   R   |   S   |   T   |  *U*  | **X** |\n",
+    "|  15   |  $-$  |  15   |   A   |   C   |   E   |   E   |   I   |   K   |   L   |   M   |   O   |   P   |   Q   |   R   |   S   |   T   |   U   |  *X*  |\n",
+    "| $-$   |  $-$  | $-$   | **A** | **C** | **E** | **E** | **I** |  *K*  | **L** | **M** | **O** | **P** | **Q** | **R** | **S** | **T** | **U** | **X** |\n",
+    "\n",
+    "An example of the algorithm working can be seen below:\n",
+    "\n",
+    "<img src=\"https://i.gifer.com/ORSX.gif\" width=\"40%\">"
+   ]
   },
   {
    "cell_type": "code",
