Best and worst case of Quicksort

--- a/Coursera/Princeton/Algorithms-Part-1/Week 3/2. Quicksort.ipynb
+++ b/Coursera/Princeton/Algorithms-Part-1/Week 3/2. Quicksort.ipynb
@@ -152,7 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A visualization of the Quick Sort can be seen by its trace illustred below, where the first row below the header contains the input and the second row contains the shuffled input. When `lo` and `hi` contain the same value (*e.g.*, row 7 (`lo=1`, `hi=1`) and row 8 (`lo=4`, `hi=4`)), there are no partitions to the subarray. The last row contains the result of the sort algorithm.\n",
+    "A visualization of the Quicksort can be seen by its trace illustred below, where the first row below the header contains the input and the second row contains the shuffled input. When `lo` and `hi` contain the same value (*e.g.*, row 7 (`lo=1`, `hi=1`) and row 8 (`lo=4`, `hi=4`)), there are no partitions to the subarray. The last row contains the result of the sort algorithm.\n",
     "\n",
     "|  lo   |   j   |   hi  |   0   |   1   |   2   |   3   |   4   |   5   |   6   |   7   |   8   |   9   |  10   |  11   |  12   |  13   |  14   |  15   |\n",
     "| :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: |\n",
@@ -178,15 +178,175 @@
     "\n",
     "An example of the algorithm working can be seen below:\n",
     "\n",
-    "<img src=\"https://i.gifer.com/ORSX.gif\" width=\"40%\">"
+    "<img src=\"https://i.gifer.com/ORSX.gif\" width=\"60%\">\n",
+    "\n",
+    "Some implementation details about Quicksort:\n",
+    "\n",
+    "- **Partitioning in-place**: Using an extra array makes partitioning easier (and stable), but is not worth the cost.\n",
+    "- **Terminating the loop**: Testing whether the pointers cross is a bit trickier than it might seem.\n",
+    "- **Staying in bounds**: The (`j == lo`) test is redundant, but the (`i == hi`) test is not.\n",
+    "- **Preserving randomness**: Shuffling is needed for performance guarantee.\n",
+    "- **Equal keys**: When duplicates are present, it is (counter-intuitively) better to stop on keys equal to the partitioning item's key.\n",
+    "\n",
+    "### Mathematical Analysis\n",
+    "\n",
+    "In the best case, Quicksort performs $\\sim N \\lg N$ number of compares. In the worst case - when the array is already sorted, the number of compares is $\\frac{1}{2} N^2$. Below we show the trace Quicksort in the best case, where the first row below the header contains the input and the second row contains the shuffled input. When `lo` and `hi` contain the same value, there are no partitions to the subarray. The last row contains the result of the sort algorithm.\n",
+    "\n",
+    "|  lo   |   j   |   hi  |   0   |   1   |   2   |   3   |   4   |   5   |   6   |   7   |   8   |   9   |  10   |  11   |  12   |  13   |  14   |\n",
+    "| :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: |\n",
+    "|  $-$  |  $-$  |  $-$  | **H** | **A** | **C** | **B** | **F** | **E** | **G** | **D** | **L** | **I** | **K** | **J** | **N** | **M** | **O** |\n",
+    "|  $-$  |  $-$  |  $-$  | **H** | **A** | **C** | **B** | **F** | **E** | **G** | **D** | **L** | **I** | **K** | **J** | **N** | **M** | **O** |\n",
+    "|   0   |  *7*  |  14   | **D** | **A** | **C** | **B** | **F** | **E** | **G** |  *H*  | **L** | **I** | **K** | **J** | **N** | **M** | **O** |\n",
+    "|   0   |  *3*  |   6   | **B** | **A** | **C** |  *D*  | **F** | **E** | **G** |   H   |   L   |   I   |   K   |   J   |   N   |   M   |   O   |\n",
+    "|   0   |  *1*  |   2   | **A** |  *B*  | **C** |   D   |   F   |   E   |   G   |   H   |   L   |   I   |   K   |   J   |   N   |   M   |   O   |\n",
+    "|   0   |  $-$  |   0   |  *A*  |   B   |   C   |   D   |   F   |   E   |   G   |   H   |   L   |   I   |   K   |   J   |   N   |   M   |   O   |\n",
+    "|   2   |  $-$  |   2   |   A   |   B   |  *C*  |   D   |   F   |   E   |   G   |   H   |   L   |   I   |   K   |   J   |   N   |   M   |   O   |\n",
+    "|   4   |  *5*  |   6   |   A   |   B   |   C   |   D   | **E** |  *F*  | **G** |   H   |   L   |   I   |   K   |   J   |   N   |   M   |   O   |\n",
+    "|   4   |  $-$  |   4   |   A   |   B   |   C   |   D   |  *E*  |   F   |   G   |   H   |   L   |   I   |   K   |   J   |   N   |   M   |   O   |\n",
+    "|   6   |  $-$  |   6   |   A   |   B   |   C   |   D   |   E   |   F   |  *G*  |   H   |   L   |   I   |   K   |   J   |   N   |   M   |   O   |\n",
+    "|   8   | *11*  |  14   |   A   |   B   |   C   |   D   |   E   |   F   |   G   |   H   | **J** | **I** | **K** |  *L*  | **N** | **M** | **O** |\n",
+    "|   8   |  *9*  |  10   |   A   |   B   |   C   |   D   |   E   |   F   |   G   |   H   | **I** |  *J*  | **K** |   L   |   N   |   M   |   O   |\n",
+    "|   8   |  $-$  |   8   |   A   |   B   |   C   |   D   |   E   |   F   |   G   |   H   |  *I*  |   J   |   K   |   L   |   N   |   M   |   O   |\n",
+    "|  10   |  $-$  |  10   |   A   |   B   |   C   |   D   |   E   |   F   |   G   |   H   |   I   |   J   |  *K*  |   L   |   N   |   M   |   O   |\n",
+    "|  12   | *13*  |  14   |   A   |   B   |   C   |   D   |   E   |   F   |   G   |   H   |   I   |   J   |   K   |   L   | **M** |  *N*  | **O** |\n",
+    "|  12   |  $-$  |  12   |   A   |   B   |   C   |   D   |   E   |   F   |   G   |   H   |   I   |   J   |   K   |   L   |  *M*  |   N   |   O   |\n",
+    "|  14   |  $-$  |  14   |   A   |   B   |   C   |   D   |   E   |   F   |   G   |   H   |   I   |   J   |   K   |   L   |   M   |   N   |  *O*  |\n",
+    "|  $-$  |  $-$  | $-$   | **A** | **B** | **C** | **D** | **E** | **F** | **G** | **H** | **I** | **J** | **K** | **L** | **M** | **N** | **O** |\n",
+    "\n",
+    "For the worst case, we can see its trace in the table below, where the initial (or after shuffled) the array is already sorted.\n",
+    "\n",
+    "|  lo   |   j   |   hi  |   0   |   1   |   2   |   3   |   4   |   5   |   6   |   7   |   8   |   9   |  10   |  11   |  12   |  13   |  14   |\n",
+    "| :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: |\n",
+    "|  $-$  |  $-$  |  $-$  | **A** | **B** | **C** | **D** | **E** | **F** | **G** | **H** | **I** | **J** | **K** | **L** | **M** | **N** | **O** |\n",
+    "|  $-$  |  $-$  |  $-$  | **A** | **B** | **C** | **D** | **E** | **F** | **G** | **H** | **I** | **J** | **K** | **L** | **M** | **N** | **O** |\n",
+    "|   0   |  *0*  |  14   |  *A*  | **B** | **C** | **D** | **E** | **F** | **G** | **H** | **I** | **J** | **K** | **L** | **M** | **N** | **O** |\n",
+    "|   1   |  *1*  |  14   |   A   |  *B*  | **C** | **D** | **E** | **F** | **G** | **H** | **I** | **J** | **K** | **L** | **M** | **N** | **O** |\n",
+    "|   2   |  *2*  |  14   |   A   |   B   |  *C*  | **D** | **E** | **F** | **G** | **H** | **I** | **J** | **K** | **L** | **M** | **N** | **O** |\n",
+    "|   3   |  *3*  |  14   |   A   |   B   |   C   |  *D*  | **E** | **F** | **G** | **H** | **I** | **J** | **K** | **L** | **M** | **N** | **O** |\n",
+    "|   4   |  *4*  |  14   |   A   |   B   |   C   |   D   |  *E*  | **F** | **G** | **H** | **I** | **J** | **K** | **L** | **M** | **N** | **O** |\n",
+    "|   5   |  *5*  |  14   |   A   |   B   |   C   |   D   |   E   |  *F*  | **G** | **H** | **I** | **J** | **K** | **L** | **M** | **N** | **O** |\n",
+    "|   6   |  *6*  |  14   |   A   |   B   |   C   |   D   |   E   |   F   |  *G*  | **H** | **I** | **J** | **K** | **L** | **M** | **N** | **O** |\n",
+    "|   7   |  *7*  |  14   |   A   |   B   |   C   |   D   |   E   |   F   |   G   |  *H*  | **I** | **J** | **K** | **L** | **M** | **N** | **O** |\n",
+    "|   8   |  *8*  |  14   |   A   |   B   |   C   |   D   |   E   |   F   |   G   |   H   |  *I*  | **J** | **K** | **L** | **M** | **N** | **O** |\n",
+    "|   9   |  *9*  |  14   |   A   |   B   |   C   |   D   |   E   |   F   |   G   |   H   |   I   |  *J*  | **K** | **L** | **M** | **N** | **O** |\n",
+    "|  10   | *10*  |  14   |   A   |   B   |   C   |   D   |   E   |   F   |   G   |   H   |   I   |   J   |  *K*  | **L** | **M** | **N** | **O** |\n",
+    "|  11   | *11*  |  14   |   A   |   B   |   C   |   D   |   E   |   F   |   G   |   H   |   I   |   J   |   K   |  *L*  | **M** | **N** | **O** |\n",
+    "|  12   | *12*  |  14   |   A   |   B   |   C   |   D   |   E   |   F   |   G   |   H   |   I   |   J   |   K   |   L   |  *M*  | **N** | **O** |\n",
+    "|  13   | *13*  |  14   |   A   |   B   |   C   |   D   |   E   |   F   |   G   |   H   |   I   |   J   |   K   |   L   |   M   |  *N*  | **O** |\n",
+    "|  14   | *14*  |  14   |   A   |   B   |   C   |   D   |   E   |   F   |   G   |   H   |   I   |   J   |   K   |   L   |   M   |   N   |  *O*  |\n",
+    "|  $-$  |  $-$  | $-$   | **A** | **B** | **C** | **D** | **E** | **F** | **G** | **H** | **I** | **J** | **K** | **L** | **M** | **N** | **O** |\n",
+    "\n",
+    "The average case, usually in case after shuffling the array, the average number of compares $C_N$ to quicksort an array of $N$ distinct keys is $\\sim 2N \\ln N$, and the number of exchanges is $\\sim \\frac{1}{3} N \\ln N$. To prove that, consider that $C_N$ satisfies the recurrence $C_0 = C_1 = 0$ and for $N \\ge 2$:\n",
+    "\n",
+    "$$ \n",
+    "C_N = (N + 1) + \\left (\\frac{C_0 + C_{N-1}}{N} \\right ) + \\left (\\frac{C_1 + C_{N-2}}{N} \\right ) + \\ldots + \\left (\\frac{C_{N-1} + C_0}{N} \\right )\n",
+    "$$ \n",
+    "\n",
+    "Multiplying both sides by $N$ and collecting terms, we have:\n",
+    "\n",
+    "$$\n",
+    "NC_N = N(N+1) + 2(C_0 + C_1 + \\ldots + C_{N-1})\n",
+    "$$\n",
+    "\n",
+    "Subtracting from the same equation for $N-1$:\n",
+    "\n",
+    "$$\n",
+    "NC_N - (N-1)C_{N-1} = 2N + 2C_{N-1}\n",
+    "$$\n",
+    "\n",
+    "Rearranging terms and dividing by $N(N+1)$, we have:\n",
+    "\n",
+    "$$\n",
+    "\\frac{C_N}{N+1} = \\frac{C_{N-1}}{N} + \\frac{2}{N+1}\n",
+    "$$\n",
+    "\n",
+    "Repeatedly applying the above equation:\n",
+    "\n",
+    "$\n",
+    "\\frac{C_N}{N+1} = \\frac{C_{N-1}}{N} + \\frac{2}{N+1} \\\\\n",
+    "\\frac{C_N}{N+1} = \\frac{C_{N-2}}{N-1} + \\frac{2}{N} + \\frac{2}{N+1} \\\\\n",
+    "\\frac{C_N}{N+1} = \\frac{C_{N-3}}{N-2} + \\frac{2}{N-1} + \\frac{2}{N} + \\frac{2}{N+1} \\\\\n",
+    "\\frac{C_N}{N+1} = \\frac{2}{3} + \\frac{2}{4} + \\frac{2}{5} + \\ldots + \\frac{2}{N+1}\n",
+    "$\n",
+    "\n",
+    "Approximating the sum by an integral, we have:\n",
+    "\n",
+    "$$\n",
+    "C_N = 2(N+1) \\left ( \\frac{1}{3} + \\frac{1}{4} + \\frac{1}{5} + \\ldots + \\frac{1}{N+1} \\right ) \\\\\n",
+    "\\sim 2(N+1) \\int_{3}^{N+1} \\frac{1}{x}dx\n",
+    "$$\n",
+    "\n",
+    "Finally, the desired result is:\n",
+    "\n",
+    "$$\n",
+    "C_N \\sim 2(N+1) \\ln N \\approx 1.39 N \\lg N\n",
+    "$$ \n",
+    "\n",
+    "In the average case, Quicksort has 39% more compares than Mergesort. On the other hand, it is faster than Mergesort in practice because of less data movement.\n",
+    "\n",
+    "### Stability of the Algorithm\n",
+    "\n",
+    "It is important to say that Quicksort is not stable, since there are long exchanges between values. The table below illustrates an example, where $C_1$ and $C_2$ change positions:\n",
+    "\n",
+    "|   i   |   j   |   0   |   1   |   2   |   3   |\n",
+    "| :---: | :---: | :---: | :---: | :---: | :---: |\n",
+    "|  $-$  |  $-$  | $B_1$ | $C_1$ | $C_2$ | $A_1$ |\n",
+    "|   1   |   3   | $B_1$ | $C_1$ | $C_2$ | $A_1$ |\n",
+    "|   1   |   3   | $B_1$ | $A_1$ | $C_2$ | $C_1$ |\n",
+    "|   0   |   1   | $A_1$ | $B_1$ | $C_2$ | $C_1$ \n",
+    "\n",
+    "### Practical Improvements\n",
+    "\n",
+    "- **Using Insertion sort for small subarrays**. As in Mergesort, it would be better to use Insertion sort when considering small arrays due to too much overhead for tiny subarrays. The cutoff to Insertion sort should be about 10 items. \n",
+    "\n",
+    "```python\n",
+    "def sort(vec, lo=None, hi=None):\n",
+    "    if hi <= lo + CUTOFF - 1):\n",
+    "        vec = Insertion.sort(vec, lo, hi)\n",
+    "        return vec\n",
+    "\n",
+    "    if lo == float('-inf'):\n",
+    "        Shuffle().shuffle(vec)\n",
+    "        print('Shuffled array: {}'.format(vec)) \n",
+    "        lo, hi = 0, len(vec)-1\n",
+    "        self.sort(vec, lo, hi)\n",
+    "    else:\n",
+    "        if hi <= lo: return \n",
+    "        j = self.partition(vec, lo, hi)\n",
+    "        self.sort(vec, lo, j-1)\n",
+    "        self.sort(vec, j+1, hi)\n",
+    "```\n",
+    "\n",
+    "- **Using the median of sample**. The best choice of pivot item would be equal to the median. Thus, you can estimate the true median by taking median of a sample (median of 3 random  items). It would lead to $\\sim frac{12}{7} N \\lg N$ compares (slightly fewer) or $\\sim \\frac{12}{35} N \\lg N$ exchanges (slightly more).\n",
+    "\n",
+    "```python\n",
+    "def sort(vec, lo=None, hi=None):\n",
+    "    m = median_of_3(vec, lo, lo+(hi-lo)/2., hi)\n",
+    "    swap(vec, lo, m)\n",
+    "    \n",
+    "    if lo == float('-inf'):\n",
+    "        Shuffle().shuffle(vec)\n",
+    "        print('Shuffled array: {}'.format(vec)) \n",
+    "        lo, hi = 0, len(vec)-1\n",
+    "        self.sort(vec, lo, hi)\n",
+    "    else:\n",
+    "        if hi <= lo: return \n",
+    "        j = self.partition(vec, lo, hi)\n",
+    "        self.sort(vec, lo, j-1)\n",
+    "        self.sort(vec, j+1, hi)\n",
+    "```\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Selection\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
