Quick-selection implementation

--- a/Coursera/Princeton/Algorithms-Part-1/Week 3/2. Quicksort.ipynb
+++ b/Coursera/Princeton/Algorithms-Part-1/Week 3/2. Quicksort.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -51,13 +51,13 @@
     "    while True:\n",
     "        while vec[i] < vec[lo]:\n",
     "            i += 1\n",
-    "            if i == hi: break\n",
-    "        while vec[j] > vec[lo]:\n",
+    "            if i >= hi: break\n",
+    "        while vec[lo] < vec[j]:\n",
     "            j -= 1\n",
     "            if j == lo: break\n",
-    "        if i > j: break\n",
-    "        vec[j], vec[i] = vec[i], vec[j]\n",
-    "    vec[lo], vec[j] = vec[j], vec[lo]\n",
+    "        if i >= j: break\n",
+    "        vec[i], vec[j] = vec[j], vec[i]\n",
+    "    vec[j], vec[lo] = vec[lo], vec[j]\n",
     "    return j\n",
     "\n",
     "vec = [4, 1, 6, 2, 5, 7, 3]\n",
@@ -345,15 +345,61 @@
    "metadata": {},
    "source": [
     "# Selection\n",
-    "\n"
+    "\n",
+    "Selection is related to the sorting problems. This problem is well solved by Quicksort partitioning. In this problem, we are given an array of $n$ items that are ordered and our task is to find the `k`-th largest element. In his original paper in 1961 Hoare gave a solution to the selection problem based on partitioning. The idea of this algorithm is just a version of Quicksort. \n",
+    "\n",
+    "We do our partitioning so that we get entry `vec[j]` in place of the array, where no element to the left is larger and no element to the right is bigger. When doing selection, we just go in one sub array or in the other depending on where `j` is. If `j` equals to `k`, then we are done, *i.e.*, we have found the `k` that is the largest. If `k` is to the left of `j`, then, we do the left sub-set which is set high to `j-1`. If `k` is to the right of `j`, we do the right sub-set that load the `j+1`. We could do this algorithm with a recursive call, where we do one partition then check whether the `k`-th element is going to be on the left part or the right part and reset lower high accordingly. If it is equal, then you found it and you return it. The implementation of the Quick-Select algorithm is presented below:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number selected is: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "def partition(vec, lo, hi):\n",
+    "    i, j = lo+1, hi-1\n",
+    "    while True:\n",
+    "        while vec[i] < vec[lo]:\n",
+    "            i += 1\n",
+    "            if i >= hi: break\n",
+    "        while vec[lo] < vec[j]:\n",
+    "            j -= 1\n",
+    "            if j == lo: break\n",
+    "        if i >= j: break\n",
+    "        vec[i], vec[j] = vec[j], vec[i]\n",
+    "    vec[j], vec[lo] = vec[lo], vec[j]\n",
+    "    return j\n",
+    "\n",
+    "\n",
+    "def quick_selection(vec, k):\n",
+    "    random.shuffle(vec)\n",
+    "    lo, hi = 0, len(vec)\n",
+    "    while hi > lo:\n",
+    "        j = partition(vec, lo, hi)\n",
+    "        if j < k:\n",
+    "            lo = j + 1\n",
+    "        elif j > k:\n",
+    "            hi = j - 1\n",
+    "        else:\n",
+    "            return vec[k]\n",
+    "    return vec[k]\n",
+    "\n",
+    "vec = [0, 1, 2, 3, 4, 5, 6, 7, 8]\n",
+    "k = 2\n",
+    "val = quick_selection(vec, k)\n",
+    "print('The number selected is: {}'.format(val))"
+   ]
   },
   {
    "cell_type": "code",
@@ -386,6 +432,19 @@
     "&#9745; linearithmic<br>\n",
     "&#9744; quadratic<br>\n",
     "&#9744; exponential"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. What is the expected running time to find the median of an array of $n$ distinct keys using *randomized quick-select*?<br>\n",
+    "\n",
+    "&#9744; constant<br>\n",
+    "&#9745; linear<br>\n",
+    "&#9744; linearithmic<br>\n",
+    "&#9744; quadratic\n",
+    " "
    ]
   },
   {
