Quick sort and selection

--- a/Coursera/Princeton/Algorithms-Part-1/Week 3/2. Quicksort.ipynb
+++ b/Coursera/Princeton/Algorithms-Part-1/Week 3/2. Quicksort.ipynb
@@ -402,18 +402,179 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Mathematical Analysis\n",
+    "\n",
+    "**Proposition**: Quick-select takes linear time on average. \n",
+    "\n",
+    "Intuitively, each partitioning step splits array approximately in half. Thus, we have:\n",
+    "\n",
+    "$$\n",
+    "N + \\frac{N}{2} + \\frac{N}{4} + \\ldots + 1 \\sim 2N ~~~~\\text{compares.}\n",
+    "$$\n",
+    "\n",
+    "where each time we have approximately half of the array, resulting in $\\sim 2N$ compares. Our assumption that the array splits in half each time is not true, but its an approximation of the average case. In a formal analysis, we compute it similar to quicksort analysis, which yields:\n",
+    "\n",
+    "$$\n",
+    "C_N = 2N + 2k \\lg \\left (\\frac{N}{k} \\right ) + 2 (N - k) \\lg \\left (\\frac{N}{N - k} \\right )\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "C_N = (2 + 2 \\lg 2) N ~~~~\\text{to find the median}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Duplicate Keys (3-way partitioning)\n",
+    "\n",
+    "Now suppose that we have significant numbers of duplicate keys, *e.g.* we have a huge file but small number of different key values. In this case, Mergesort that doesn't matter that much what the key values are like always uses between $\\frac{1}{2}N \\lg N$ and $N \\lg N$ compares. On the other hand, Quicksort would took quadratic time. To improve this algorithm, Dijkstra proposed the three way partitioning (*a.k.a.* Dutch National flag). In this algorithm, we divide the array into three parts, having two pointers into the middle, *i.e.*, a boundary between the keys that are less than the partitioning element and those that are equal of the partitioning element; another boundary between the keys that are equal of partitioning elements and the one that is greater; and finally in the middle are all the equal keys. \n",
+    "\n",
+    "Let's take a look at how this algorithm works in the image below, where initially we have our `i` pointer which is on the left of our array and elements on its right we have not seen yet. We have two other pointers that generate boundaries. Everything to the right of `gt` is known to be greater than the partitioning element, everything to the left of `lt` is known to be less than the partitioning element, and between `lt` and `i` is known to be equal to the partitioning element. What the method does  here is to maintain these elements invariants. \n",
+    "\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/Princeton/Algorithms-Part-1/Week%203/images/3way_partitioning.svg\" width=\"70%\" align=\"center\"/>\n",
+    "\n",
+    "Summarizing, considering the element of partitioning as `vec[lo]`, the Dijkstra 3-Way Partitioning scans `i` from left to righ:\n",
+    "- `vec[i] < vec[lt]`: exchange `vec[lt]` and `vec[i]`, and increment both `lt` and `i`\n",
+    "- `vec[i] > vec[gt]`: exchange `vec[gt]` and `vec[i]`, and decrement `gt`\n",
+    "- `vec[i] == vec[gt]`: increment `i`\n",
+    "\n",
+    "where the idea is to maintain the array as the image below:\n",
+    "\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/Princeton/Algorithms-Part-1/Week%203/images/3way_algorithm.svg\" width=\"50%\" align=\"center\"/>\n",
+    "\n",
+    "Below, we have the Python implementation of this algorithm:"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial array:   [3, 1, 3, 4, 3, 7, 3, 2, 3, 1, 2]\n",
+      "Central element: 3\n",
+      "Partition array: [1, 2, 1, 2, 3, 3, 3, 3, 3, 7, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def three_way_partition(vec, lo, hi):\n",
+    "    lt, i, gt = lo, lo, hi-1\n",
+    "    v = vec[lo]\n",
+    "    while i <= gt:\n",
+    "        if vec[i] == vec[lt]:\n",
+    "            i += 1\n",
+    "        elif vec[i] < vec[lt]:\n",
+    "            vec[i], vec[lt] = vec[lt], vec[i]\n",
+    "            i += 1\n",
+    "            lt += 1\n",
+    "        elif vec[i] > vec[gt]:\n",
+    "            vec[i], vec[gt] = vec[gt], vec[i]\n",
+    "            gt -= 1\n",
+    "\n",
+    "    return vec\n",
+    "\n",
+    "vec = [3, 1, 3, 4, 3, 7, 3, 2, 3, 1, 2]\n",
+    "print('Initial array:   {}'.format(vec))\n",
+    "print('Central element: {}'.format(vec[0]))\n",
+    "three_way_partition(vec, 0, len(vec))\n",
+    "print('Partition array: {}'.format(vec))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below we present the visual trace of 3-way partition quicksort algorithm. \n",
+    "\n",
+    "|  lt   |   i   |   gt  |   0   |   1   |   2   |   3   |   4   |   5   |   6   |   7   |   8   |   9   |  10   |  11   |\n",
+    "| :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: |\n",
+    "|   0   |  *0*  |  11   | **R** | **B** | **W** | **W** | **R** | **W** | **B** | **R** | **R** | **W** | **B** | **R** |\n",
+    "|   0   |  *1*  |  11   | **R** |  *B*  |   W   |   W   |   R   |   W   |   B   |   R   |   R   |   W   |   B   | **R** |\n",
+    "|   1   |  *2*  |  11   |   B   | **R** |  *W*  |   W   |   R   |   W   |   B   |   R   |   R   |   W   |   B   | **R** |\n",
+    "|   1   |  *2*  |  10   |   B   | **R** |  *R*  |   W   |   R   |   W   |   B   |   R   |   R   |   W   | **B** |   W   |\n",
+    "|   1   |  *3*  |  10   |   B   | **R** |   R   |  *W*  |   R   |   W   |   B   |   R   |   R   |   W   | **B** |   W   |\n",
+    "|   1   |  *3*  |   9   |   B   | **R** |   R   |  *B*  |   R   |   W   |   B   |   R   |   R   | **W** |   W   |   W   |\n",
+    "|   2   |  *4*  |   9   |   B   |   B   | **R** |   R   |  *R*  |   W   |   B   |   R   |   R   | **W** |   W   |   W   |\n",
+    "|   2   |  *5*  |   9   |   B   |   B   | **R** |   R   |   R   |  *W*  |   B   |   R   |   R   | **W** |   W   |   W   |\n",
+    "|   2   |  *5*  |   8   |   B   |   B   | **R** |   R   |   R   |  *W*  |   B   |   R   | **R** |   W   |   W   |   W   |\n",
+    "|   2   |  *5*  |   7   |   B   |   B   | **R** |   R   |   R   |  *R*  |   B   | **R** |   W   |   W   |   W   |   W   |\n",
+    "|   2   |  *6*  |   7   |   B   |   B   | **R** |   R   |   R   |   R   |  *B*  | **R** |   W   |   W   |   W   |   W   |\n",
+    "|   3   |  *7*  |   7   |   B   |   B   |   B   | **R** |   R   |   R   |   R   |  *R*  |   W   |   W   |   W   |   W   |\n",
+    "|   3   |  *8*  |   7   |   B   |   B   |   B   | **R** |   R   |   R   |   R   | **R** |  *W*  |   W   |   W   |   W   |\n",
+    "|   3   |   8   |   7   | **B** | **B** | **B** |  *R*  |  *R*  |  *R*  |  *R*  |  *R*  | **W** | **W** | **W** | **W** |\n",
+    "\n",
+    "\n",
+    "### Duplicate keys: Lower bound\n",
+    "\n",
+    "Sorting lower bound. If there are $n$ distinct keys and the $i^{th}$ one occurs $x_i$ times, any compare-based sorting algorithm must use at least:\n",
+    "\n",
+    "$$\n",
+    "\\lg \\left ( \\frac{N!}{x_1! x_2! \\ldots x_n!} \\right ) \\sim - \\sum_{i=1}^{n} \\lg \\frac{x_i}{N}\n",
+    "$$\n",
+    "\n",
+    "with $N \\lg N$ when all distinct, and linear when having only a constant number of distinct keys."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# System Sorts\n",
+    "\n",
+    "Sorting algorithms are essential in a broad variety of applications. Some applications are obvious, but others are not so obvious. For example, obvious applications would be:\n",
+    "\n",
+    "- Sort a list of names.\n",
+    "- Organize an MP3 library.\n",
+    "- Display Google PageRank results.\n",
+    "- List RSS feed in reverse chronological order.\n",
+    "\n",
+    "Some problems become easier once items are in sorted order:\n",
+    "\n",
+    "- Find the median.\n",
+    "- Identify statistical outliers.\n",
+    "- Binary search in a database.\n",
+    "- Find duplicates in a mailing list.\n",
+    "\n",
+    "Finally there are non-obvious applications:\n",
+    "\n",
+    "- Data compression.\n",
+    "- Computer graphics.\n",
+    "- Computational biology.\n",
+    "- Load balancing on a parallel computer.\n",
+    "\n",
+    "A number of sorting algorithms have been released. The question that may arise is \"Which algorithm to use?\". Usually algorithms fill some of the attributes (but not all), such as:\n",
+    "\n",
+    "- Stable?\n",
+    "- Parallel?\n",
+    "- Deterministic?\n",
+    "- Keys all distinct?\n",
+    "- Multiple key types?\n",
+    "- Linked list or arrays?\n",
+    "- Large or small items?\n",
+    "- Is your array randomly ordered?\n",
+    "- Need guaranteed performance?\n",
+    "\n",
+    "For example, for elementary algorithms, we select some attributes to fill the table below:\n",
+    "\n",
+    "| Algorithm   | In place? | Stable?  | Worst case      | Average case    | Best case       | Remarks                                          |\n",
+    "| :---------- | :-------: | :------: | :-------------: | :-------------: | :-------------: | :----------------------------------------------- |\n",
+    "| Selection   |  &#10004; | &#10005; | $\\frac{N^2}{2}$ | $\\frac{N^2}{2}$ | $\\frac{N^2}{2}$ | $N$ exchanges                                    |\n",
+    "| Insertion   |  &#10004; | &#10004; | $\\frac{N^2}{2}$ | $\\frac{N^2}{4}$ | $N$             | Use for small $N$ or partially ordered           |\n",
+    "| Shell       |  &#10004; | &#10005; |        ?        |        ?        | $N$             | Tight code, subquadratic                         |\n",
+    "| Merge       |  &#10005; | &#10004; |    $N \\log N$   |    $N \\log N$   | $N \\log N$      | $N \\log N$ guarantee, stable                     |\n",
+    "| Quick       |  &#10004; | &#10005; | $\\frac{N^2}{2}$ |   $2 N \\log N$  | $N \\log N$      | Fastest in practice                              |\n",
+    "| 3-way Quick |  &#10004; | &#10005; | $\\frac{N^2}{2}$ |   $2 N \\log N$  | $N$             | Improves Quicksort in presence of duplicate keys  |\n",
+    "| ????        |  &#10004; | &#10004; |    $N \\log N$   |    $N \\log N$   | $N$             | Holy soring grail                                |"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -451,8 +612,82 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "&#9744; "
+    "3. Using 3-way partitioning with quicksort is most effective when the input array has which of the following properties?<br>\n",
+    "\n",
+    "&#9744; all items distinct<br>\n",
+    "&#9745; a few distinct items<br>\n",
+    "&#9744; items in strictly increasing order<br>\n",
+    "&#9744; items in strictly decreasing order"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Why does `Arrays.sort()` in Java use mergesort instead of quicksort when sorting reference types ?<br>\n",
+    "\n",
+    "&#9744; stability<br>\n",
+    "&#9744; $n \\log n$ guaranteed performance<br>\n",
+    "&#9745; both A and B<br>\n",
+    "&#9744; neither A nor B"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. Why does `Arrays.sort()` in Java use quicksort instead of mergesort when sorting primitive types ?<br>\n",
+    "\n",
+    "&#9744; uses less memory on typical inputs<br>\n",
+    "&#9744; faster on typical inputs<br>\n",
+    "&#9745; both A and B<br>\n",
+    "&#9744; neither A nor B"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Interview Questions: Quicksort "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. **Nuts and bolts**. A disorganized carpenter has a mixed pile of `n` nuts and `n` bolts. The goal is to find the corresponding pairs of nuts and bolts. Each nut fits exactly one bolt and each bolt fits exactly one nut. By fitting a nut and a bolt together, the carpenter can see which one is bigger (but the carpenter cannot compare two nuts or two bolts directly). Design an algorithm for the problem that uses at most proportional to $n \\lg n$ compares (probabilistically).\n",
+    "\n",
+    "**Answer**:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. **Selection in two sorted arrays**. Given two sorted arrays `a[]` and `b[]`, of sizes $n_1$ and $n_2$, respectively, design an algorithm to find the $k^{th}$ largest key. The order of growth of the worst case running time of your algorithm should be $\\log n$, where $n = n_1 + n_2$:<br>\n",
+    "\n",
+    "&#9656; Version 1: $n_1 = n_2$ and $k = \\frac{n}{2}$<br>\n",
+    "&#9656; Version 2: $k = \\frac{n}{2}$<br>\n",
+    "&#9656; Version 3: no restrictions\n",
+    "\n",
+    "**Answer:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. **Decimal dominants**. Given an array with $n$ keys, design an algorithm to find all values that occur more than $\\frac{n}{10}$ times. The expected running time of your algorithm should be linear.\n",
+    "\n",
+    "**Answer:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
